--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -11,5 +11,6 @@
 .home-content {
   display: flex;
   flex-grow: 1;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
