--- a/src/utils/styles/sidebar/styles.css
+++ b/src/utils/styles/sidebar/styles.css
@@ -278,7 +278,7 @@
   font-size: 15px;
 }
 .pro-sidebar .pro-menu .pro-menu-item.active {
-  color: #d8d8d8;
+  color: #6bc900;
 }
 .pro-sidebar .pro-menu .pro-menu-item .suffix-wrapper {
   opacity: 1;
