--- a/src/components/searcher/searcher.scss
+++ b/src/components/searcher/searcher.scss
@@ -198,6 +198,10 @@ body {
   }
 }
 
+// .align {
+//   padding-left: 1.5%;
+// }
+
 @media all and (min-width: 769px) {
   .input-container {
     margin-top: 40px;
