--- a/src/components/switchFilter/switchFilter.css
+++ b/src/components/switchFilter/switchFilter.css
@@ -1,11 +1,13 @@
 .switch {
   position: relative;
   display: inline-block;
-  width: 6.6vw;
-  height: 5vh;
+  width: 90px;
+  height: 31px;
   top: 4px;
-  /* margin-top: 3%; */
+  left: 5px;
 }
+
+/* a height le saque 3 pixeles */
 
 .switch input {
   display: none;
@@ -13,12 +15,14 @@
 
 .slider {
   position: absolute;
+  z-index: 999;
   cursor: pointer;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ca2222;
+  background-color: rgba(102, 255, 0, 0.753);
+  box-shadow: 0px 8px 30px 0px rgba(94, 255, 0, 0.205);
   -webkit-transition: 0.4s;
   transition: 0.4s;
   border-radius: 34px;
@@ -27,10 +31,10 @@
 .slider:before {
   position: absolute;
   content: '';
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 2px;
+  height: 23px;
+  width: 23px;
+  left: 6px;
+  bottom: 4px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
@@ -38,7 +42,8 @@
 }
 
 input:checked + .slider {
-  background-color: #2ab934;
+  background-color: rgba(98, 0, 255, 0.76);
+  box-shadow: 0px 10px 50px 0px rgba(98, 0, 255, 0.247);
 }
 
 input:focus + .slider {
@@ -53,8 +58,10 @@ input:checked + .slider:before {
 
 /*------ ADDED CSS ---------*/
 .slider:after {
-  content: 'NAM';
-  color: white;
+  z-index: -1;
+  position: relative;
+  content: 'NAME';
+  color: rgb(255, 255, 255);
   display: block;
   position: absolute;
   transform: translate(-50%, -50%);
