--- a/src/components/sidebarFootItem/sidebarFootItem.css
+++ b/src/components/sidebarFootItem/sidebarFootItem.css
@@ -17,6 +17,7 @@
   text-decoration-color: none;
   text-decoration-line: none;
   color: rgb(158, 158, 158);
+  transition: all 900ms ease-out;
 }
 
 .bg-icon h6 {
@@ -36,6 +37,8 @@
 
 .bg-icon:hover {
   background-color: rgba(255, 115, 0, 0.37);
+  box-shadow: 0px 0px 50px 20px rgba(255, 81, 0, 0.253);
+  transition: all 90ms ease-out;
   color: rgb(255, 81, 0);
   cursor: pointer;
 }
