--- a/src/screens/home/home.css
+++ b/src/screens/home/home.css
@@ -14,3 +14,11 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media all and (max-width: 525px) {
+  .home {
+    background: url('../../utils/backgrounds/phone-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
