--- a/src/components/itemData/itemData.css
+++ b/src/components/itemData/itemData.css
@@ -16,14 +16,17 @@
 }
 
 .item-text {
+  display: flex;
   width: 100%;
   height: 100%;
   color: white;
   text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .text-h4 {
-  margin: 0;
+  margin-top: 0px;
 }
 
 .item-data:hover {
