--- a/src/components/itemData/itemData.css
+++ b/src/components/itemData/itemData.css
@@ -30,11 +30,48 @@
 }
 
 .item-data:hover {
-  box-shadow: 0px 10px 50px 0px rgba(94, 255, 0, 0.144);
+  box-shadow: 0px 10px 50px 0px rgba(255, 255, 255, 0.192);
   transform: scale(1.01);
 }
 
 .item-data:active {
+  transform: scale(1);
+  transition: transform 0s;
+}
+
+.locat-epi-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background-color: rgba(27, 27, 27, 0.322);
+  transition: transform 100ms;
+}
+
+.text-locat-epi {
+  color: rgba(255, 255, 255, 0.418);
+  font-weight: lighter;
+  text-align: center;
+  text-shadow: 0px 0px 10px rgba(155, 10, 199, 0.555);
+}
+
+.title-data {
+  color: rgba(81, 255, 0, 0.514);
+  text-shadow: 0px 0px 10px rgba(81, 255, 0, 0.719);
+  text-decoration-line: underline;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.locat-epi-container:hover {
+  box-shadow: 0px 10px 50px 0px rgba(255, 255, 255, 0.192);
+  transform: scale(1.01);
+}
+
+.locat-epi-container:active {
   transform: scale(1);
   transition: transform 0s;
 }
