--- a/src/components/modalPopup/modalPopup.css
+++ b/src/components/modalPopup/modalPopup.css
@@ -28,7 +28,7 @@
 }
 
 .close-button {
-  font-size: 35px;
+  font-size: 30px;
   color: rgb(214, 214, 214);
 }
 
@@ -38,11 +38,11 @@
   width: 100%;
   height: 50%;
   object-fit: contain;
+  margin-top: 10px;
 }
 
 .modal-image {
   height: 100%;
-  margin-top: 10px;
   object-fit: contain;
 }
 
@@ -59,6 +59,7 @@
 
 .modal-name-text {
   color: rgb(123, 255, 0);
+  text-align: center;
 }
 
 .pad-left {
@@ -66,7 +67,6 @@
 }
 
 .data-cont {
-  padding-top: 2%;
   width: 100%;
   height: 100%;
   font-size: 13px;
@@ -89,12 +89,50 @@
 }
 
 .species {
-  margin-left: -82px;
+  margin-left: -90px;
 }
 
 @media all and (max-width: 950px) {
   .modal-content {
     width: 60%;
+  }
+
+  .modal-container {
+    height: 95%;
+  }
+
+  .data-cont {
+    height: 30%;
+  }
+
+  .modal-name-text {
+    margin: 0;
+  }
+
+  .modal-text {
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .margin-bottom-phone {
+    margin-bottom: 30px;
+  }
+
+  .margin-bottom-slighty {
+    margin-bottom: 20px;
+  }
+
+  .center-text {
+    margin: 0;
+    line-height: 20px;
+    padding: 0;
+    text-align: center;
+  }
+
+  .modal-title {
+    align-self: center;
+    margin: 0;
+    padding: 0;
   }
 }
 
@@ -102,4 +140,50 @@
   .modal-content {
     width: 80%;
   }
+}
+
+/* LOCATIONS AND EPISODES MODAL STYLES */
+
+.loc-ep-name {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 8px;
+  align-items: center;
+  width: 100%;
+  color: rgb(235, 235, 235);
+  font-size: 13px;
+}
+
+.responsive-margin {
+  margin: 0;
+  padding: 0;
+}
+
+.text-decoration {
+  text-decoration-line: underline;
+}
+
+.chars-residents-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
+  justify-items: center;
+  align-self: center;
+  justify-self: center;
+  justify-content: center;
+}
+
+.alert-no-residents {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.alert-text {
+  color: red;
 }
