--- a/src/components/pageButton/pageButton.css
+++ b/src/components/pageButton/pageButton.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: -200px;
+  margin-bottom: -120%;
   font-size: 13px;
 }
 
