--- a/src/components/pageButton/pageButton.css
+++ b/src/components/pageButton/pageButton.css
@@ -14,7 +14,7 @@
   height: 30%;
   justify-content: center;
   font-size: 13px;
-  margin-bottom: -50%;
+  margin-bottom: -40%;
 }
 
 .page-button-container h2 {
@@ -111,5 +111,9 @@
 @media all and (max-width: 650px) {
   .page-button-container {
     margin-left: -110%;
+  }
+
+  .page-button-container {
+    margin-bottom: -45%;
   }
 }
