--- a/src/components/pageButton/pageButton.css
+++ b/src/components/pageButton/pageButton.css
@@ -3,6 +3,8 @@
   font-size: 13px;
   grid-column-start: 3;
   grid-column-end: 4;
+  grid-row-start: 6;
+  grid-row-end: 7;
   position: sticky;
   bottom: 0;
   z-index: 1;
@@ -92,6 +94,11 @@
 }
 
 @media all and (max-width: 1200px) {
+  .page-button-grid {
+    grid-row-start: 9;
+    grid-row-end: 10;
+  }
+
   .page-button-container {
     margin-left: -110%;
   }
@@ -101,6 +108,8 @@
   .page-button-grid {
     grid-column-start: 2;
     grid-column-end: 3;
+    grid-row-start: 10;
+    grid-row-end: 11;
   }
 
   .page-button-container {
@@ -111,9 +120,11 @@
 @media all and (max-width: 650px) {
   .page-button-container {
     margin-left: -110%;
+    margin-bottom: -45%;
   }
 
-  .page-button-container {
-    margin-bottom: -45%;
+  .page-button-grid {
+    grid-row-start: 13;
+    grid-row-end: 14;
   }
 }
